[package]
name = "sdk"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
integrationos-domain = { version = "8", registry = "CLOUDSMITH" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.15", default-features = false, features = [
    "anyhow",
    "async",
    "serde-json",
] }
napi-derive = "2.15"
rand = "0.8.5"
http = "0.2"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
url = "2.5.0"
serde_json = "1.0.114"

[build-dependencies]
napi-build = "2.0.1"
