[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
integrationos-domain = { version = "10", registry = "CLOUDSMITH" }
mongodb = "2.8"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
syn = "2.0"
tokio = { version = "1", features = ["macros", "rt"] }
