[package]
name = "sdk"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
http = "0.2"
http-serde-ext = "0.1"
macros = { path = "../macros" }
napi = { version = "2.15", default-features = false, features = [
    "anyhow",
    "async",
    "chrono_date",
    "serde-json",
] }
napi-derive = "2.15"
rand = "0.8.5"
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
url = "2.5.0"

[build-dependencies]
napi-build = "2.0.1"
